--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:padding="5dp"
         android:text="@string/TextPresentation"
         android:textAlignment="center"
         android:textColor="#546E7A"
