--- a/app/src/main/res/drawable/tab_background.xml
+++ b/app/src/main/res/drawable/tab_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/> <!-- Changez la couleur de fond ici -->
-    <corners android:radius="10dp"/> <!-- Définissez le rayon ici -->
+    <solid android:color="#FFFFFF"/>
+    <corners android:radius="10dp"/>
 </shape>
